// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolved themes dark 1`] = `
{
  "accentAlert": "#F97316",
  "accentAlertFaded": "#FDBA74",
  "accentDanger": "#EF4444",
  "accentInfo": "#3B82F6",
  "accentInfoFaded": "#93C5FD",
  "accentPrimary": "#6FA3E8",
  "accentPrimaryBright": "#6ec6ff",
  "accentPrimaryDeep": "#3B7FB4",
  "accentSuccess": "#22C55E",
  "accentTabActive": "#3E7FD1",
  "accentTint": "rgba(111, 163, 232, 0.6)",
  "accentTintSelected": "rgba(111, 163, 232, 0.1)",
  "accentWarning": "#FCD34D",
  "borderDefault": "rgba(255, 255, 255, 0.12)",
  "borderStrong": "rgba(0, 0, 0, 0.55)",
  "overlayPhotoScrim": "rgba(0, 0, 0, 0.5)",
  "overlayScrim": "rgba(0, 0, 0, 0.55)",
  "overlayScrimSoft": "rgba(0, 0, 0, 0.15)",
  "overlayShadow": "#000000",
  "surfaceBackground": "#1C1A17",
  "surfaceCard": "#262320",
  "surfaceDanger": "#f44336",
  "surfaceHighlight": "rgba(255, 255, 255, 0.08)",
  "surfaceHover": "rgba(240, 236, 228, 0.04)",
  "surfacePanel": "#313131",
  "surfaceSelected": "#34302A",
  "surfaceSwatchDark": "#313131",
  "surfaceSwatchLight": "#FFFFFF",
  "surfaceSwatchSystem": "#C7C2B8",
  "surfaceThumb": "#FFFFFF",
  "surfaceTrackOff": "#4A443B",
  "surfaceTransparent": "rgba(255, 255, 255, 0)",
  "textAccent": "#6FA3E8",
  "textDanger": "#f44336",
  "textInverse": "#1C1A17",
  "textOnAccent": "#FFFFFF",
  "textOnPhoto": "#FFFFFF",
  "textPrimary": "#F0ECE4",
  "textSecondary": "rgba(240, 236, 228, 0.5)",
  "textTabInactive": "rgba(240, 236, 228, 0.6)",
}
`;

exports[`resolved themes light 1`] = `
{
  "accentAlert": "#F97316",
  "accentAlertFaded": "#FDBA74",
  "accentDanger": "#EF4444",
  "accentInfo": "#3B82F6",
  "accentInfoFaded": "#93C5FD",
  "accentPrimary": "#3E7FD1",
  "accentPrimaryBright": "#6ec6ff",
  "accentPrimaryDeep": "#3B7FB4",
  "accentSuccess": "#22C55E",
  "accentTabActive": "#3E7FD1",
  "accentTint": "rgba(62, 127, 209, 0.08)",
  "accentTintSelected": "rgba(62, 127, 209, 0.1)",
  "accentWarning": "#FCD34D",
  "borderDefault": "rgba(30, 25, 20, 0.10)",
  "borderStrong": "rgba(0, 0, 0, 0.5)",
  "overlayPhotoScrim": "rgba(0, 0, 0, 0.5)",
  "overlayScrim": "rgba(0, 0, 0, 0.5)",
  "overlayScrimSoft": "rgba(0, 0, 0, 0.15)",
  "overlayShadow": "#000000",
  "surfaceBackground": "#FAF7F0",
  "surfaceCard": "#FFFFFF",
  "surfaceDanger": "#f44336",
  "surfaceHighlight": "rgba(62, 127, 209, 0.1)",
  "surfaceHover": "rgba(42, 37, 33, 0.04)",
  "surfacePanel": "#313131",
  "surfaceSelected": "#F2EDE2",
  "surfaceSwatchDark": "#313131",
  "surfaceSwatchLight": "#FFFFFF",
  "surfaceSwatchSystem": "#C7C2B8",
  "surfaceThumb": "#FFFFFF",
  "surfaceTrackOff": "#D8D2C4",
  "surfaceTransparent": "rgba(255, 255, 255, 0)",
  "textAccent": "#3E7FD1",
  "textDanger": "#f44336",
  "textInverse": "#FAF7F0",
  "textOnAccent": "#FFFFFF",
  "textOnPhoto": "#FFFFFF",
  "textPrimary": "#2A2521",
  "textSecondary": "rgba(42, 37, 33, 0.5)",
  "textTabInactive": "rgba(42, 37, 33, 0.6)",
}
`;
